--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "ethers": "^5.7.2",
     "ethers-multicall": "^0.2.3",
+    "express": "^4.18.2",
     "mongoose": "^8.1.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2"
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
